# examples

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  RECIPE_SCHEMA_VERSION  pyproject.toml  setup.cfg
.ci/: check-links.sh  format-notebooks.py  generate-templates.py  lint-r-examples.R  update-references.py  validate-examples.py
.github/: CODEOWNERS
.github/workflows/: check-links.yml  generate-templates.yml  pull-request.yml  update-main-from-release.yml  update-references.yml  validate-examples.yml  validate-projects.yml
.saturn/: images.json  recipe.json  templates-enterprise.json  templates-hosted.json  templates.json
dashboards/: dashboard.ipynb
examples/api/: README.md  houseprice.py
examples/api-flask/: README.md  app.py
examples/autoshutoff-jupyter-kernel/: README.md  autoshutoff.py  user_autoshutoff.py  userautoshutoff.py
examples/blank-cpu/: readme.md
examples/blank-gpu/: readme.md
examples/bodo/: README.md  autopx-starter-code.ipynb  bodo-eda-chicago-crimes.ipynb  bodo-model-training-nyc-taxi.ipynb  bodo-model-training.ipynb  bodo-tpch.ipynb  tpch.ipynb
examples/comet/: README.md  comet-example.ipynb  comet-pytorch.ipynb
examples/dashboard/: README.md  dashboard.ipynb  houseprice.py  readme.md
examples/dashboard-dash/: README.md  app.py
examples/dashboard-streamlit/: README.md  app.py
examples/dask-practical-calculations/: README.md  dask-distributed-calculations.ipynb  functions.py
examples/dask-practical-data/: README.md  (+1 more)
examples/start-agents/cpu-agno-hackernews/: README.md  app.py  pyproject.toml  requirements.txt
(+742 files in other folders)
